@@ -4,8 +4,9 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class AllCombinationsAddUpToSum {
-    static List<Integer> output = new ArrayList<>();
+    static List<Integer> li = new ArrayList<>();
     static int[] arr = {3, 7, 9, 2, 6, 15, 8, 1};
+
     public static void main(String[] args) {
         var target = 9;
         findCombinations(target,0);
@@ -13,14 +14,14 @@ public class AllCombinationsAddUpToSum {
 
     private static void findCombinations(int target, int statIndex) {
         if(target==0){
-            System.out.println(output);
+            System.out.println(li);
             return;
         }
         for (var i=statIndex;i<arr.length;i++){
             if(arr[i]<=target){
-                output.add(arr[i]);
+                li.add(arr[i]);
                 findCombinations(target-arr[i],i+1);
-                output.remove(output.size()-1);
+                li.removeLast();
             }
         }
     }
